--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "amazon-cognito-identity-js": "^6.3.12",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "dom": "^0.0.3",
+    "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-hook-form-mui": "^7.0.0-beta.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
